<resources>
    <string name="app_name">Submissionlima</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Language Settings</string>

    <string name="menu_movie">Movie</string>
    <string name="menu_tvmovie">Tv Movie</string>
    <string name="menu_moviefav">Movie Favorite</string>
    <string name="menu_tvmoviefav">Tv Movie Favorite</string>
    <string name="menu_search">Search</string>
    <string name="menu_notif">Notification</string>
    <string name="dialy_reminder">Dialy Reminder</string>

    <string name="title_movie">Movie</string>
    <string name="title_tvmovie">TV Movie</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="strip">-------------------------</string>
    <string name="year">Year</string>
    <string name="overview">Overview</string>


    <string name="appwidget_text">MOVIE CATALOGUE BANNER</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="search_hint">Search . . .</string>



    <string name="not_dialyreminder">Click this button you will get a notification every day</string>
    <string name="not_releasereminder">Click this button and you will get the movie notifications</string>
    <string name="release_today_msg">Hello</string>
    <string name="release_movie_message">Hallo</string>

</resources>
